// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagnostic testing files Inline parameter 1`] = `
DiagnosticList {
  "list": [
    {
      "message": "You may want to add the \`store_test_results\` step to visualize the test results in CircleCI",
      "range": {
        "end": {
          "character": 6,
          "line": 14,
        },
        "start": {
          "character": 2,
          "line": 14,
        },
      },
      "severity": 4,
    },
  ],
}
`;

exports[`Diagnostic testing files Matrix alias 1`] = `
DiagnosticList {
  "list": [
    {
      "message": "You may want to add the \`store_test_results\` step to visualize the test results in CircleCI",
      "range": {
        "end": {
          "character": 6,
          "line": 13,
        },
        "start": {
          "character": 2,
          "line": 13,
        },
      },
      "severity": 4,
    },
  ],
}
`;

exports[`Diagnostic testing files Shellcheck 1`] = `
DiagnosticList {
  "list": [
    {
      "code": "SC2086",
      "codeDescription": {
        "href": "https://www.shellcheck.net/wiki/SC2086",
      },
      "message": "Double quote to prevent globbing and word splitting.",
      "range": {
        "end": {
          "character": 59,
          "line": 19,
        },
        "start": {
          "character": 42,
          "line": 19,
        },
      },
      "severity": 3,
    },
    {
      "code": "SC2086",
      "codeDescription": {
        "href": "https://www.shellcheck.net/wiki/SC2086",
      },
      "message": "Double quote to prevent globbing and word splitting.",
      "range": {
        "end": {
          "character": 59,
          "line": 18,
        },
        "start": {
          "character": 42,
          "line": 18,
        },
      },
      "severity": 3,
    },
    {
      "code": "SC2086",
      "codeDescription": {
        "href": "https://www.shellcheck.net/wiki/SC2086",
      },
      "message": "Double quote to prevent globbing and word splitting.",
      "range": {
        "end": {
          "character": 56,
          "line": 14,
        },
        "start": {
          "character": 39,
          "line": 14,
        },
      },
      "severity": 3,
    },
    {
      "code": "SC2086",
      "codeDescription": {
        "href": "https://www.shellcheck.net/wiki/SC2086",
      },
      "message": "Double quote to prevent globbing and word splitting.",
      "range": {
        "end": {
          "character": 57,
          "line": 13,
        },
        "start": {
          "character": 40,
          "line": 13,
        },
      },
      "severity": 3,
    },
    {
      "code": "SC2086",
      "codeDescription": {
        "href": "https://www.shellcheck.net/wiki/SC2086",
      },
      "message": "Double quote to prevent globbing and word splitting.",
      "range": {
        "end": {
          "character": 63,
          "line": 12,
        },
        "start": {
          "character": 46,
          "line": 12,
        },
      },
      "severity": 3,
    },
    {
      "code": "SC2086",
      "codeDescription": {
        "href": "https://www.shellcheck.net/wiki/SC2086",
      },
      "message": "Double quote to prevent globbing and word splitting.",
      "range": {
        "end": {
          "character": 62,
          "line": 9,
        },
        "start": {
          "character": 45,
          "line": 9,
        },
      },
      "severity": 3,
    },
  ],
}
`;

exports[`Diagnostic testing files Undefined parameter 1`] = `
DiagnosticList {
  "list": [
    {
      "data": [],
      "message": "Parameter not-defined-param is not defined in build",
      "range": {
        "end": {
          "character": 32,
          "line": 26,
        },
        "start": {
          "character": 10,
          "line": 26,
        },
      },
      "severity": 1,
      "source": "cci-language-server",
    },
    {
      "data": [],
      "message": "Parameter not-defined-param is not defined for build",
      "range": {
        "end": {
          "character": 32,
          "line": 19,
        },
        "start": {
          "character": 10,
          "line": 19,
        },
      },
      "severity": 1,
      "source": "cci-language-server",
    },
  ],
}
`;

exports[`Diagnostic testing files autocomplete-jobs.yml 1`] = `
DiagnosticList {
  "list": [
    {
      "message": "You may want to add the \`store_test_results\` step to visualize the test results in CircleCI",
      "range": {
        "end": {
          "character": 7,
          "line": 63,
        },
        "start": {
          "character": 2,
          "line": 63,
        },
      },
      "severity": 4,
    },
    {
      "data": [],
      "message": "Job is unused",
      "range": {
        "end": {
          "character": 14,
          "line": 48,
        },
        "start": {
          "character": 6,
          "line": 48,
        },
      },
      "severity": 2,
      "source": "cci-language-server",
    },
    {
      "data": [],
      "message": "Job is unused",
      "range": {
        "end": {
          "character": 13,
          "line": 24,
        },
        "start": {
          "character": 6,
          "line": 24,
        },
      },
      "severity": 2,
      "source": "cci-language-server",
    },
    {
      "data": [
        {
          "edit": {
            "changes": {
              "file:///home/circleci/project/test-files/.circleci/invalid-files/autocomplete-jobs.yml": [
                {
                  "newText": "5.1.0",
                  "range": {
                    "end": {
                      "character": 27,
                      "line": 9,
                    },
                    "start": {
                      "character": 22,
                      "line": 9,
                    },
                  },
                },
              ],
            },
          },
          "kind": "quickfix",
          "title": "Update to last minor",
        },
        {
          "edit": {
            "changes": {
              "file:///home/circleci/project/test-files/.circleci/invalid-files/autocomplete-jobs.yml": [
                {
                  "newText": "5.1.0",
                  "range": {
                    "end": {
                      "character": 27,
                      "line": 9,
                    },
                    "start": {
                      "character": 22,
                      "line": 9,
                    },
                  },
                },
              ],
            },
          },
          "kind": "quickfix",
          "title": "Update to last version",
        },
      ],
      "message": "A newer minor version exists.
- Current: 5.0.3
- Latest:  5.1.0",
      "range": {
        "end": {
          "character": 27,
          "line": 9,
        },
        "start": {
          "character": 2,
          "line": 9,
        },
      },
      "severity": 3,
      "source": "cci-language-server",
    },
    {
      "data": [],
      "message": "Orb is unused",
      "range": {
        "end": {
          "character": 27,
          "line": 9,
        },
        "start": {
          "character": 2,
          "line": 9,
        },
      },
      "severity": 2,
      "source": "cci-language-server",
    },
    {
      "data": [],
      "message": "version must be one of the following: 2, 2.1",
      "range": {
        "end": {
          "character": 14,
          "line": 0,
        },
        "start": {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "cci-language-server",
    },
  ],
}
`;

exports[`Diagnostic testing files config1.yml 1`] = `
DiagnosticList {
  "list": [],
}
`;

exports[`Diagnostic testing files diagnostic.yml 1`] = `
DiagnosticList {
  "list": [
    {
      "data": [
        {
          "edit": {
            "changes": {
              "file:///home/circleci/project/test-files/.circleci/diagnostic.yml": [
                {
                  "newText": "4.12.1",
                  "range": {
                    "end": {
                      "character": 29,
                      "line": 4,
                    },
                    "start": {
                      "character": 24,
                      "line": 4,
                    },
                  },
                },
              ],
            },
          },
          "kind": "quickfix",
          "title": "Update to last minor",
        },
        {
          "edit": {
            "changes": {
              "file:///home/circleci/project/test-files/.circleci/diagnostic.yml": [
                {
                  "newText": "4.12.1",
                  "range": {
                    "end": {
                      "character": 29,
                      "line": 4,
                    },
                    "start": {
                      "character": 24,
                      "line": 4,
                    },
                  },
                },
              ],
            },
          },
          "kind": "quickfix",
          "title": "Update to last version",
        },
      ],
      "message": "A newer minor version exists.
- Current: 4.4.4
- Latest:  4.12.1",
      "range": {
        "end": {
          "character": 29,
          "line": 4,
        },
        "start": {
          "character": 2,
          "line": 4,
        },
      },
      "severity": 3,
      "source": "cci-language-server",
    },
  ],
}
`;
